# sqlalchemy-history

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  404.html  CHANGES.rst  CONTRIBUTING.md  LICENSE  README.md  README.rst  benchmark.py  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  pages.yml  publish.yml
alembic/: index.html
api/: index.html
async/: index.html
configuration/: index.html
docs/: Makefile  README.md  alembic.md  alembic.rst  api.md  api.rst  async.md  conf.py  configuration.md  configuration.rst  index.rst  intro.rst  make.bat  native_versioning.rst  plugins.md  plugins.rst  queries.md  queries.rst  revert.md  revert.rst  schema.md  schema.rst  transactions.md  transactions.rst  tutorials.md  utilities.md  utilities.rst  version_objects.md  version_objects.rst
plugins/: index.html
queries/: index.html
requirements/: test.txt
revert/: index.html
schema/: index.html
search/: search_index.json
sqlalchemy_continuum/: __init__.py  builder.py  manager.py  transaction.py  unit_of_work.py  utils.py
sqlalchemy_continuum/plugins/: __init__.py
sqlalchemy_history/: __init__.py  _typing.py  builder.py  exc.py  expression_reflector.py  factory.py  fetcher.py  manager.py  model_builder.py  operation.py  relationship_builder.py  reverter.py  schema.py  table_builder.py  transaction.py  unit_of_work.py  utils.py  version.py
sqlalchemy_history/dialects/: postgresql.py
sqlalchemy_history/plugins/: __init__.py  activity.py  base.py  flask.py  null_delete.py  property_mod_tracker.py  transaction_changes.py  transaction_meta.py
tests/: __init__.py  test_accessors.py  test_association_proxy.py  test_changeset.py  test_column_aliases.py  test_column_inclusion_and_exclusion.py  test_composite_primary_key.py  test_configuration.py  test_custom_schema.py  test_custom_version_base_class.py  test_delete.py  test_exotic_listener_chaining.py  test_exotic_operation_combos.py  test_hybrid_property.py  test_i18n.py  test_insert.py  test_listener_configuration.py  test_mapper_args.py  test_memory_clearing.py  test_point_in_time_restore.py  test_raw_sql.py  test_revert.py  test_savepoints.py  test_sessions.py  test_transaction.py  test_update.py  test_vacuum.py  test_validity_strategy.py  test_validity_strategy_multithreaded.py  test_versions.py
tests/builders/: test_model_builder.py  test_relationship_builder.py  test_table_builder.py
tests/databases/: README.md  docker-compose.mssql.yml  docker-compose.oracle.yml  docker-compose.postgresql.yml
tests/dialects/: test_triggers.py
tests/inheritance/: test_common_base_class.py  test_concrete_inheritance.py  test_join_table_inheritance.py  test_multi_level_inheritance.py  test_single_table_inheritance.py
tests/plugins/: test_activity.py  test_flask.py  test_null_delete.py  test_plugin_collection.py  test_property_mod_tracker.py  test_transaction_changes.py  test_transaction_meta.py
tests/relationships/: test_association_table_relations.py  test_custom_condition_relations.py  test_dynamic_relationships.py  test_many_to_many_relations.py  test_non_versioned_classes.py  test_one_to_many_relations.py  test_one_to_one_relations.py  test_write_only_relationships.py
tests/reported_bugs/: test_bug_141_after_flush_postexec_op_type_issue.py  test_bug_25_polymorphic_on_attr.py  test_bug_27_datetime_insertion_issue.py  test_bug_97_default_values_in_version_table.py  test_bug_versioned_column_properties_dict_api_collision.py
tests/revert/: test_deep_relationships.py  test_many_to_many_relationships.py  test_one_to_one_relationship.py  test_one_to_one_with_secondary_table.py  test_polymorphic_relationship.py
tests/schema/: test_update_end_transaction_id.py  test_update_property_mod_flags.py
tests/sqlalchemy_async/: __init__.py  conftest.py  test_accessors.py
tests/utils/: test_changeset.py  test_count_versions.py  test_get_versioning_manager.py  test_is_modified.py  test_option.py  test_parent_class.py  test_parent_table.py  test_transaction_class.py  test_tx_column_name.py  test_version_class.py  test_version_table.py  test_versioning_manager.py
transactions/: index.html
tutorials/: index.html
utilities/: index.html
version_objects/: index.html
