[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SQLAlchemy-History"
description = "History tracking extension for SQLAlchemy."
version = "0"
authors = ["Corridor Platforms <postmaster@corridorplatforms.com>"]
license = "Apache-2.0, BSD-3-Clause"
readme = "docs/README.md"
packages = [{ include = "sqlalchemy_history" }]
repository = "https://github.com/corridor/sqlalchemy-history"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"

SQLAlchemy = ">=2"
SQLAlchemy-Utils = ">=0.30.12"
cached-property = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "2.21.0"

# [tool.poetry.group.test.dependencies]
pytest = ">=2.3.5"
flexmock = ">=0.9.7"
psycopg2-binary = ">=2.4.6"
PyMySQL = ">=0.8.0"
sqlalchemy_i18n = "*"
pymssql = ">=2.2.0"
cx-Oracle = "8.3.0"
pytest-cov = "*"

[tool.ruff]
line-length = 110
target-version = 'py39'
output-format = "grouped"

[tool.coverage.run]
dynamic_context = "test_function"
branch = true

[tool.poetry-version-plugin]
source = "init"

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
exclude = ["tests/*"]

[tool.ruff.lint]
ignore = [
    "COM812",  # Do not force trailing commas
    "N805",    # first argument of a method should be named 'self'
    "PLR0913", # Allow long parameter lists
    "S101",    # Allow "assert" statements
    "TRY003",  # Allow raising exceptions with strings. It is recommended to create separate classes for this
]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "E",      # pycodestyle - errors
    "EXE",    # flake8-executable
    "F",      # pyflakes
    "FA",     # flake8-future-annotations
    "FBT",    # flake8-boolean-trap
    "FLY",    # flynt
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "ISC",    # flake8-implicit-str-concat
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PERF",   # perflint
    "PIE",    # flake8-pie
    "PGH",    # pygrep-hooks
    "PLC",    # pylint-convention
    "PLE",    # pylint-error
    "PLR",    # pylint-refactor
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "PYI024", # flake8-pyi
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff specific rules
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "SLOT",   # flake8-slots
    "T10",    # flake8-debugger
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle - warnings
    "YTT",    # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_history*"]
combine-as-imports = true
order-by-type = false
lines-after-imports = 2
case-sensitive = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S608", "N806", "PLR2004", "RUF012"]
